--- a/responsive.html
+++ b/responsive.html
@@ -7,18 +7,32 @@
 </head>
 <body>
     <div class="container">
-         <h1></h1>
+         <h1>Let's start getting a little more fancy!</h1>
          <img src="" alt="">
 
          <div class="columns">
-               <div class="col"></div>
-               <div class="col"></div>
-               <div class="col"></div>
+               <div class="col">
+                     <h2></h2>
+                     <p></p>
+               </div>
+               <div class="col">
+                     <h2></h2>
+                     <p></p>
+                     <p></p> 
+               </div>
+               <div class="col">
+                     <p></p>
+               </div>
          </div>
 
          <div class="columns">
-               <div class="col"></div>
-               <div class="col"></div>
+               <div class="col">
+                     <h2></h2>
+                     <p></p>
+               </div>
+               <div class="col">
+                     <p></p>
+               </div>
          </div>
     </div>
     
