--- a/responsive.html
+++ b/responsive.html
@@ -8,30 +8,85 @@
 <body>
     <div class="container">
          <h1>Let's start getting a little more fancy!</h1>
-         <img src="" alt="">
+         <img src="images/ele1.png" alt="">
 
          <div class="columns">
                <div class="col">
-                     <h2></h2>
-                     <p></p>
+                     <h2>Dolor sit</h2>
+                     <p>Lorem Ipsum is simply dummy text of the printing
+                         and typesetting industry. Lorem Ipsum has been 
+                         the industry's standard dummy text ever since 
+                         the 1500s, when an unknown printer took a galley
+                         of type and scrambled it to make a type specimen book.
+                         It has survived not only five centuries, but also the 
+                         leap into electronic typesetting, remaining essentially 
+                         unchanged. It was popularised in the 1960s with the
+                         release of Letraset sheets containing Lorem Ipsum
+                         passages, and more recently with desktop publishing 
+                         software like Aldus PageMaker including versions of Lorem Ipsum.</p>
                </div>
                <div class="col">
-                     <h2></h2>
-                     <p></p>
-                     <p></p> 
+                     <h2>Consectetur adipising</h2>
+                     <p>Lorem Ipsum is simply dummy text of the printing
+                        and typesetting industry. Lorem Ipsum has been 
+                        the industry's standard dummy text ever since 
+                        the 1500s, when an unknown printer took a galley
+                        of type and scrambled it to make a type specimen book.
+                        It has survived not only five centuries, but also the 
+                        leap into electronic typesetting, remaining essentially 
+                        unchanged. It was popularised in the 1960s with the
+                        release of Letraset sheets containing Lorem Ipsum
+                        passages, and more recently with desktop publishing 
+                        software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+
+                        <p>Lorem Ipsum is simply dummy text of the printing
+                            and typesetting industry. Lorem Ipsum has been 
+                            the industry's standard dummy text ever since 
+                            the 1500s, when an unknown printer took a galley
+                            of type and scrambled it to make a type specimen book.
+                            It has survived not only five centuries, but also the 
+                            leap into electronic typesetting, remaining essentially 
+                            unchanged. It was popularised in the 1960s with the
+                            release of Letraset sheets containing Lorem Ipsum
+                            passages, and more recently with desktop publishing 
+                            software like Aldus PageMaker including versions of Lorem Ipsum.</p>
                </div>
                <div class="col">
-                     <p></p>
+                     <p>Lorem Ipsum is simply dummy text of the printing
+                         and typesetting industry. Lorem Ipsum has been 
+                         the industry's standard dummy text ever since 
+                         the 1500s, when an unknown printer took a galley
+                         of type and scrambled it to make a type specimen book.
+                         It has survived not only five centuries, but also the 
+                         leap into electronic typesetting, remaining essentially 
+                         unchanged. It was popularised in the 1960s with the
+                         release of Letraset sheets containing Lorem Ipsum
+                         passages, and more recently with desktop publishing 
+                         software like Aldus PageMaker including versions of Lorem Ipsum.</p>
                </div>
          </div>
 
          <div class="columns">
                <div class="col">
-                     <h2></h2>
-                     <p></p>
+                     <h2>Deserunt mollit anim id est laborum </h2>
+                     <p>Lorem Ipsum is simply dummy text of the printing
+                        and typesetting industry. Lorem Ipsum has been 
+                        the industry's standard dummy text ever since 
+                        the 1500s, when an unknown printer took a galley
+                        of type and scrambled it to make a type specimen book.
+                        It has survived not only five centuries, but also the 
+                        leap into electronic typesetting, remaining essentially 
+                        unchanged. It was popularised in the 1960s with the
+                        release of Letraset sheets containing Lorem Ipsum
+                        passages, and more recently with desktop publishing 
+                        software like Aldus PageMaker including versions of Lorem Ipsum.</p>
                </div>
                <div class="col">
-                     <p></p>
+                <p>Lorem Ipsum is simply dummy text of the printing
+                    and typesetting industry. Lorem Ipsum has been 
+                    the industry's standard dummy text ever since 
+                    the 1500s, when an unknown printer took a galley
+                    of type and scrambled it to make a type specimen book.</p>
                </div>
          </div>
     </div>
