project1 html is add

--- a/nav_bar2.html
+++ b/nav_bar2.html
@@ -39,6 +39,7 @@ h1{
     margin: 0 auto;
 }
 
+ /* newly added */
 .container-nav{
     display: flex;
     justify-content: space-between;
@@ -66,7 +67,9 @@ nav ul{
 nav li{
     /* border: 1px solid orange; */
     /* margin: 0 1rem; */
-    margin-left: 2rem;
+
+    /* newly added */
+    margin-left: 2rem; 
 } 
 
 nav a{
