--- a/project01.html
+++ b/project01.html
@@ -141,7 +141,7 @@ nav a:focus{
                  <h2 class="article-title">Finding simplicity in life</h2>
                  <img src="" alt="" class="article-image">
                  <p class="article-info">July 23, 2019 | 3 comments</p>
-                 <p class="article-body">Finding simplicity in life Life can get complicated really quickly, but it doesn't have to be! There are many ways to simplify your life, a few of which we've explored in the past. This week we're taking a bit of a approach though, in how you can find simplicity in the life you already living. continue reading</p>
+                 <p class="article-body"></p>
                  <a href="" class="article-read-more" ></a>
              </article>
 
