Responsive website, practice project is created

--- a/nav_bar1.html
+++ b/nav_bar1.html
@@ -20,6 +20,7 @@ h1{
     color: #143774;
     font-size:  2rem;
     margin: 0;
+    /* border: 1px solid red; */
 }
 
 .subtitle{
@@ -27,6 +28,7 @@ h1{
     color: #1792d2;
     font-size:  0.75rem;
     margin: 0;
+    /* border: 1px solid red; */
 }
 
 /* ==================
@@ -47,6 +49,7 @@ nav ul{
     display: flex;
     padding: 0;
     justify-content: center;
+    /* border: 1px solid red; */
 
     /* width:545px */
     /* justify-content: space-between; */
