--- a/project01.html
+++ b/project01.html
@@ -4,30 +4,89 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora|Ubuntu:300,400,700&display=swap">
     <style> 
 body{
     margin: 0;
     font-family: 'Ubuntu', sans-serif;
+
+    font-size: 1.125rem;
+    font-weight: 300;
+}
+
+img{
+    max-width: 100%;
+    display: block;
 }
 
 /* ==================
  Typography
 ==================*/
 
-h1{
+h1,
+h2,
+h3 {
     font-family: 'Lora', serif;
     font-weight: 400;
     color: #143774;
-    font-size:  2rem;
-    margin: 0;
+    margin-top: 0;
 }
 
+h1{
+    font-size:  2rem;
+    margin: 0;
+} 
+
+a{
+    color: #1792d2;
+    font-weight: bold;
+}
+
+a:hover,
+a:focus{
+    color: #143774;
+}
+
+strong{
+    font-weight: 700;
+}
+ 
+/* h1 subtitle */
 .subtitle{
     font-weight: 700;
     color: #1792d2;
     font-size:  0.75rem;
     margin: 0;
 }
+
+.article-title{
+    font-size: 1.5rem;
+}
+
+.article-read-more,
+.article-info{
+    font-size: .875rem;
+}
+
+.article-read-more{
+    color: #1792d2;
+    text-decoration: none;
+    font-weight: 700;
+}
+
+.article-read-more:hover,
+.article-read-more:focus{
+    color: #143774;
+    text-decoration: underline;
+}
+
+.article-info{
+    margin: 2em 0;
+}
+
+
+
+
 
 /* ==================
  Layout
@@ -40,26 +99,43 @@ h1{
     margin: 0 auto;
 }
 
- /* newly added */
-.container-nav{
+.container-flex{
     display: flex;
+    flex-direction: column;
     justify-content: space-between;
 }
 
 header{
     /* text-align: center; */
     /* background: pink; */
+    background: #f8f8f8;
     padding: 2em 0;
+
+    text-align: center;
+    margin-bottom: 3em;
 } 
+ 
+/* main{
+   width: 75%; 
+}
 
-@media (max-width: 675px){
-    .container-nav{
-        flex-direction: column;
+aside{
+   width: 25%; 
+} */
+
+@media (min-width: 675px){
+    .container-flex{
+        flex-direction: row;
     }
 
-    header{
-        text-align: center;
+    main{
+        width: 75%; 
     }
+
+    aside{
+        width: 20%; 
+    }
+
 }
 
 /* navigation */
@@ -116,11 +192,96 @@ nav a:focus{
     }
 }
 
+/* articles  */
+
+.article-featured{
+    border-bottom:  #707070 1px solid;
+    padding-bottom: 2em;
+    margin-bottom: 2em;
+    /* background: pink; */
+}
+
+.article-recent{
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 2em;
+}
+
+.article-recent-main{
+    order: 2;
+}
+
+.article-recent-secondary{
+    order: 1;
+}
+
+@media (min-width: 675px){
+    .article-recent{
+        flex-direction: row;
+        justify-content: space-between;
+    }
+
+    .article-recent-main{
+        width: 68%;
+    }
+
+    .article-recent-secondary{
+        width: 30%;
+    }
+
+    .article-featured{
+        display: flex;
+        flex-direction: column;
+    }
+
+    .article-image {
+        order: -2;
+    }
+
+    .article-info{
+        order: -1;
+    }
+}
+
+/* @media (min-width: 675px){
+    .article-recent{
+        flex-direction: row;
+        justify-content: space-between;
+    }
+
+    .article-recent-main{
+        width: 68%;
+    }
+
+    .article-recent-secondary{
+        width: 30%;
+    }
+
+    .article-image{
+        width: 100%;
+        min-height: 250px;
+        object-fit: cover;
+        /* object-position: left; */
+    }
+} */
+
+
+/* @media (min-widtg: 500px) {
+    .article-recent-main{
+        margin-top: -2.5em;
+    }
+
+    .article-info{
+        text-align: right;
+    }
+} */
+
+
     </style>
 </head>
 <body>
    <header>
-       <div class="container container-nav">
+       <div class="container container-flex ">
             <div class="site-title">
                 <h1>Living the social life</h1>
                 <p class="subtitle">A blog exploring minimalism in life</p>
@@ -135,13 +296,13 @@ nav a:focus{
        </div> <!-- .container -->
    </header>
 
-   <div class="container">
+   <div class="container container-flex">
          <main role="main">
              <article class="article-featured">
                  <h2 class="article-title">Finding simplicity in life</h2>
                  <img src="" alt="" class="article-image">
                  <p class="article-info">July 23, 2019 | 3 comments</p>
-                 <p class="article-body"></p>
+                 <p class="article-body">o</p>
                  <a href="" class="article-read-more" ></a>
              </article>
 
@@ -183,24 +344,26 @@ nav a:focus{
          </main>
 
          <aside class="sidebar">
+
              <div class="sidebar-widget">
-                <h2 class="widget-title"></h2>
-                <img src="" alt="" class="widget-image">
-                <p class="widget-body"></p>
+                <h2 class="widget-title">ABOUT ME</h2>
+                <img src="" alt="john doe" class="widget-image">
+                <p class="widget-body">I find life better, and I'm happier, when things 
+                   are nice and simple</p>
              </div>
              <div class="sidebar-widget">
-                <h2 class="widget-title"></h2>
+                <h2 class="widget-title">RECENT POSTS</h2>
                 <div class="widget-recent-post"> 
-                    <h3 class="widget-recent-post-title"></h3>
-                    <img src="" alt="" class="widget-image">
+                    <h3 class="widget-recent-post-title">Keeping cooking simple</h3>
+                    <img src="" alt="two dumplings on a wood plate with chopsticks" class="widget-image">
                 </div>
                 <div class="widget-recent-post"> 
-                    <h3 class="widget-recent-post-title"></h3>
-                    <img src="" alt="" class="widget-image">
+                    <h3 class="widget-recent-post-title">Simplicity and work</h3>
+                    <img src="" alt="a chair white chair at a white desk on a white wall" class="widget-image">
                 </div>
                 <div class="widget-recent-post"> 
-                    <h3 class="widget-recent-post-title"></h3>
-                    <img src="" alt="" class="widget-image">
+                    <h3 class="widget-recent-post-title">Simple decorations</h3>
+                    <img src="" alt="a green plant in a clear, round vase with water in it" class="widget-image">
                 </div>
 
              </div>
